# self-organizing-tree-models

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
documentation/: bibliography.bib  main.tex
glad/include/glad/: glad.h
glad/src/: glad.c
presentation/: .gitignore  slides.tex
report/: .gitignore  report.tex
shaders/: OpenGlFragmentShader.glsl  OpenGlVertexShader.glsl
src/: Application.cpp  BoundingBox.cpp  BoundingBox.hpp  Color.cpp  Color.hpp  Environment.cpp  Environment.hpp  Image.cpp  Image.hpp  Marker.cpp  Marker.hpp  MarkerSet.cpp  MarkerSet.hpp  MarkerSetRanges.cpp  MarkerSetRanges.hpp  Metamer.cpp  Metamer.hpp  OpenGlWindow.cpp  OpenGlWindow.hpp  Point.cpp  Point.hpp  PointAverage.cpp  PointAverage.hpp  Random.cpp  Random.hpp  Range.cpp  Range.hpp  SpaceAnalysis.cpp  SpaceAnalysis.hpp  Text.cpp  Text.hpp  Tree.cpp  Tree.hpp  Types.cpp  Types.hpp  UserAction.cpp  UserAction.hpp  Vector.cpp  Vector.hpp  Vertex.cpp  (+1 more)
